--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "helmet": "^8.0.0",
     "mongoose": "^8.7.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7"
   }
 }
